# python-dev-template

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
docs/api/: python_dev_template.md
docs/guide/: branching.md  getting-started.md  stack.md
src/python_dev_template/: main.py
tests/: test_main.py
