[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "python-dev-template"
version = "0.1.0"
description = "Modern Python project template with uv, ruff, mypy, pytest, MkDocs, and VSCode/MCP setup."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Your Name", email = "you@example.com" },
]

dependencies = [
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.26",
]

[tool.uv]
default-groups = ["dev", "docs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "--cov=src",
  "--cov-report=term-missing",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = true
strict_equality = true
mypy_path = ["src"]
